--- a/frontend-angular-workspace/projects/end-user/src/app/components/body-cart/body-cart.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/body-cart/body-cart.component.html
@@ -290,6 +290,7 @@
       <!--Success Modal-->
       <amber-modal
         [(display)]="displaySuccess"
+        title="Success!"
       >
         <div
           class="
