--- a/frontend-angular-workspace/projects/administration/src/app/components/body-contract/components/contract-table/contract-table.component.html
+++ b/frontend-angular-workspace/projects/administration/src/app/components/body-contract/components/contract-table/contract-table.component.html
@@ -123,16 +123,17 @@
         <amber-icon
           backgroundImageUrl="assets/records.svg"
           size="1.25em"
+          (click)="cookedContract.displayUsagesLog = true"
         ></amber-icon>
         <amber-icon
           backgroundImageUrl="assets/dollar.svg"
           size="1.25em"
           (click)="cookedContract.displayPayments = true"
         ></amber-icon>
-        <amber-icon
-          backgroundImageUrl="assets/print.svg"
-          size="1.25em"
-        ></amber-icon>
+<!--        <amber-icon-->
+<!--          backgroundImageUrl="assets/print.svg"-->
+<!--          size="1.25em"-->
+<!--        ></amber-icon>-->
         <amber-icon
           backgroundImageUrl="assets/view-show.svg"
           size="1.25em"
