--- a/frontend-angular-workspace/projects/administration/src/app/components/body-contract/components/contract-table/contract-table.component.html
+++ b/frontend-angular-workspace/projects/administration/src/app/components/body-contract/components/contract-table/contract-table.component.html
@@ -114,26 +114,25 @@
           gap-1
         "
       >
-
         <amber-icon
           backgroundImageUrl="assets/zoom-in.svg"
           size="1.25em"
           (click)="cookedContract.displayDetails = true"
         ></amber-icon>
-        <amber-icon
-          backgroundImageUrl="assets/records.svg"
-          size="1.25em"
-          (click)="cookedContract.displayUsagesLog = true"
-        ></amber-icon>
+<!--        <amber-icon-->
+<!--          backgroundImageUrl="assets/records.svg"-->
+<!--          size="1.25em"-->
+<!--          (click)="cookedContract.displayUsagesLog = true"-->
+<!--        ></amber-icon>-->
         <amber-icon
           backgroundImageUrl="assets/dollar.svg"
           size="1.25em"
           (click)="cookedContract.displayPayments = true"
         ></amber-icon>
-<!--        <amber-icon-->
-<!--          backgroundImageUrl="assets/print.svg"-->
-<!--          size="1.25em"-->
-<!--        ></amber-icon>-->
+        <amber-icon
+          backgroundImageUrl="assets/print.svg"
+          size="1.25em"
+        ></amber-icon>
         <amber-icon
           backgroundImageUrl="assets/view-show.svg"
           size="1.25em"
@@ -152,7 +151,21 @@
         ></app-contract-details>
       </div>
     </app-table-cell>
-
+  </ng-container>
+  <ng-container>
+    <div
+      class="
+        p-2
+        col-span-full
+        flex
+        flex-row-reverse
+      "
+    >
+      <amber-paginator
+        [(current)]="current"
+        [total]="total"
+      ></amber-paginator>
+    </div>
   </ng-container>
 </app-table-master>
 
