Commit before updating
(cherry picked from commit 765100d1467763caa1704229b74b3d0033c15cc7)

--- a/frontend-angular-workspace/projects/administration/src/app/components/body-contract/components/contract-table/contract-table.component.html
+++ b/frontend-angular-workspace/projects/administration/src/app/components/body-contract/components/contract-table/contract-table.component.html
@@ -55,9 +55,9 @@
 
   <!--Header-->
   <ng-container
-    *ngFor="let headerCell of headerCells"
   >
     <app-table-cell
+      *ngFor="let headerCell of headerCells"
       [tableCell]="headerCell"
     ></app-table-cell>
   </ng-container>
@@ -132,6 +132,7 @@
         <amber-icon
           backgroundImageUrl="assets/print.svg"
           size="1.25em"
+          (click)="openDownload(cookedContract)"
         ></amber-icon>
         <amber-icon
           backgroundImageUrl="assets/view-show.svg"
@@ -152,6 +153,7 @@
       </div>
     </app-table-cell>
   </ng-container>
+
   <ng-container>
     <div
       class="
