--- a/frontend-angular-workspace/projects/amber-core/src/lib/components/icon/icon.component.html
+++ b/frontend-angular-workspace/projects/amber-core/src/lib/components/icon/icon.component.html
@@ -10,5 +10,6 @@
   "
   [class]="disabled ? ['cursor-not-allowed'] : ['cursor-pointer', 'hover:ring-1', 'active:ring-2']"
   [attr.tabindex]="disableTabIndex ? '' : 0"
+  (click)="disabled ? doNothing() : action()"
 >
 </div>
