--- a/frontend-angular-workspace/projects/administration/src/styles.scss
+++ b/frontend-angular-workspace/projects/administration/src/styles.scss
@@ -2,6 +2,10 @@
 //@import "./css/tailwind-components.scss";
 //@import "./css/tailwind-screens.scss";
 //@import "./css/tailwind-utilities.scss";
+//@import "tailwindcss/base";
+//@import "tailwindcss/components";
+//@import "tailwindcss/utilities";
+//@import "tailwindcss/screens";
 
 html {
   scrollbar-width: none;
