--- a/frontend-angular-workspace/projects/administration/src/app/components/body-statistics/components/chart-revenue/chart-revenue.component.html
+++ b/frontend-angular-workspace/projects/administration/src/app/components/body-statistics/components/chart-revenue/chart-revenue.component.html
@@ -1,4 +1,55 @@
 <app-chart-box
   title="Revenue"
 >
+  <div
+    class="
+      flex
+      flex-col
+      gap-4
+    "
+  >
+    <div
+      class="
+        flex
+        gap-2
+      "
+    >
+      <div
+        class="
+          flex
+          flex-col
+          gap-2
+        "
+      >
+        <div>
+          Statistics from
+          <span
+            class="underline cursor-pointer"
+            (click)="toggleRangePicker()"
+          >
+            {{revenueData.dateStartDisplay}}
+          </span>
+          to
+          <span
+            class="underline cursor-pointer"
+            (click)="toggleRangePicker()"
+          >
+            {{revenueData.dateEndDisplay}}
+          </span>
+        </div>
+        <app-range-picker-box
+          [(display)]="revenueData.displayRangePicker"
+          [(pickedDates)]="revenueData.dateRange"
+          [allowPastRange]="true"
+        ></app-range-picker-box>
+      </div>
+    </div>
+
+    <ngx-charts-line-chart
+      [results]="revenueData.chartData"
+      [xAxis]="true"
+      [yAxis]="true"
+      [timeline]="true"
+    ></ngx-charts-line-chart>
+  </div>
 </app-chart-box>
