--- a/frontend-angular-workspace/projects/administration/src/app/components/body-bike/components/bike-details/bike-details.component.html
+++ b/frontend-angular-workspace/projects/administration/src/app/components/body-bike/components/bike-details/bike-details.component.html
@@ -157,6 +157,51 @@
           </div>
         </div>
 
+        <!--Number Plates-->
+        <div>Number Plates:</div>
+        <div
+          style="grid-template-columns: repeat(2, max-content)"
+          class="
+            border-2
+            p-2
+            grid
+            gap-2
+            items-center
+            max-h-32
+            overflow-y-scroll
+          "
+        >
+          <ng-container
+            *ngFor="let numberPlate of cookedBikeModel.modelData.numberPlates; let index = index; trackBy: trackByNumberPlate"
+          >
+            <input
+              amberCommonInputText
+              [size]="14"
+              type="text"
+              [(ngModel)]="cookedBikeModel.modelData.numberPlates[index]"
+            />
+            <amber-icon
+              backgroundImageUrl="assets/trash.svg"
+              size="1em"
+              (click)="removeNumberPlate(index)"
+            ></amber-icon>
+          </ng-container>
+
+          <div
+            class="
+              col-span-full
+              flex
+              flex-row-reverse
+            "
+          >
+            <amber-icon
+              backgroundImageUrl="assets/add-solid.svg"
+              (click)="addNumberPlate()"
+              size="1em"
+            ></amber-icon>
+          </div>
+        </div>
+
         <!--Description-->
         <div
           class="col-span-full"
@@ -233,6 +278,7 @@
       </div>
     </div>
 
+    <!--Images-->
     <div
       class="
         flex
@@ -240,15 +286,8 @@
         gap-4
       "
     >
-<!--      <div-->
-<!--        class="-->
-<!--          text-lg-->
-<!--        "-->
-<!--      >-->
-<!--        Images-->
-<!--      </div>-->
       <div
-        style="height: 30em"
+        style="height: 36em"
         class="
           flex
           flex-col
