Implement more stuff

--- a/frontend-angular-workspace/projects/administration/src/app/components/body-contract/components/contract-details/contract-details.component.html
+++ b/frontend-angular-workspace/projects/administration/src/app/components/body-contract/components/contract-details/contract-details.component.html
@@ -106,11 +106,23 @@
             <div>{{vehicleUsage.price}} USD</div>
           </app-table-cell>
 
-          <!--Amount-->
+          <!--Number Plates-->
           <app-table-cell
             [tableCell]="customCell"
           >
-            <div>{{vehicleUsage.amount}}</div>
+            <div
+              class="
+                flex
+                flex-col
+                gap-2
+              "
+            >
+              <div
+                *ngFor="let numberPlate of vehicleUsage.numberPlates"
+              >
+                {{numberPlate}}
+              </div>
+            </div>
           </app-table-cell>
 
           <!--Purpose-->
